name:                frank
version:             0.1.0.0
synopsis:            Frank programming language
description:         Please see README.md
homepage:            https://github.com/cmcl/frankjnr
author:              Craig McLaughlin
maintainer:          example@example.com
copyright:           2016 Craig McLaughlin
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable frank
  hs-source-dirs:      .
                       , shonky/src
  other-modules: BwdFwd
               , Compile
               , DesugarSyntax
               , FreshNames
               , Parser
               , ParserCommon
               , RefineSyntax
               , RefineSyntaxCommon
               , RefineSyntaxConcretiseEps
               , RefineSyntaxSubstitItfAliases
               , Shonky.Semantics
               , Shonky.Syntax
               , Syntax
               , TypeCheck
               , TypeCheckCommon
               , Unification
               , Debug

  build-depends: Unique
               , base >= 4.7 && < 5
               , bytestring
               , containers
               , indentation-trifecta
               , mtl
               , parsers
               , pretty
               , pretty >= 1.1.3.3
               , tasty
               , tasty-hunit
               , text
               , transformers
               , trifecta
               , unordered-containers
               , cmdargs
  main-is:          Frank.hs
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010

source-repository head
  type:     git
  location: https://github.com/cmcl/frankjnr/
